--- a/index.html
+++ b/index.html
@@ -105,4 +105,17 @@
         setInterval(draw, 33);  // Smooth 30fps animation
     </script>
 </body>
+
 </html>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <title>My Music Page</title>
+    </head>
+    <body>
+        <h1>Listen to My Song!</h1>
+        <audio controls>
+            <source src="https://youtu.be/P3SZ2Foz0Vk?si=DIp68irBuvOCZ5r_" type="audio/mpeg">
+        </audio>
+    </body>
+    </html>
